[package]
name = "the-tracker-flows"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio_wasi = { version = "1", features = ["macros", "rt"] }
anyhow = "1"
dotenv = "0.15.0"

serde_json = "1.0.97"
serde = { version = "1", features = ["derive"] }
flowsnet-platform-sdk = "0.1.3"
log = "0.4.14"
schedule-flows = "0.3.0"
chrono = "0.4.31"
base64 = "0.21.5"
regex = "1.10.3"
http_req_wasi = { version = "0.11.1", features = ["wasmedge_rustls"] }
urlencoding = "2.1.3"

